--- a/services.html
+++ b/services.html
@@ -4,11 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Subjects – Ripa Elevate Academy</title>
-  <meta name="description" content="Comprehensive tutoring services from elementary through college level. Math, reading, writing, test prep, and AI skills training available.">
+  <meta name="description" content="Comprehensive tutoring services from elementary through college level. Math, reading, writing, science, test prep, and AI skills training available.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
+
+  <!-- SEO: Science Tutoring Service -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "name": "Science Tutoring",
+    "provider": { "@type": "Organization", "name": "Ripa Elevate Academy" },
+    "areaServed": "US",
+    "description": "One-on-one science tutoring for Grades 3–12 and introductory college: Biology, Physics, and Environmental Science, plus science fair and lab report support. Not offered: organic chemistry, immunology, anatomy, or regular chemistry."
+  }
+  </script>
 </head>
 <body>
   <header>
@@ -68,6 +80,20 @@
           <li>Regents and State Exam preparation</li>
           <li>College application essays</li>
         </ul>
+      </div>
+
+      <!-- NEW: Science Tutoring -->
+      <div class="card" id="science">
+        <h3>Science (Grades 3–12 & Intro College)</h3>
+        <ul>
+          <li><strong>Elementary & Middle (3–8):</strong> General Science, Life Science (cells, ecosystems), Earth Science (weather, climate, geology, space), Physical Science basics (matter, energy, motion), Scientific Method</li>
+          <li><strong>High School (9–12):</strong> Biology (genetics, evolution, ecology, human body systems at HS level), Physics (motion, forces, energy, waves, electricity), Environmental Science</li>
+          <li><strong>Intro College:</strong> College Biology, Introductory Physics (algebra-based), Environmental Science, general science electives, and study strategies for labs & exams</li>
+          <li><strong>Extras:</strong> Science fair guidance and lab report writing; AP Biology & AP Physics support</li>
+        </ul>
+        <p style="font-size:.9rem;color:#666;margin-top:.75rem;">
+          Taught by our science specialist currently in dental school. <em>Not offered:</em> organic chemistry, immunology, anatomy, or regular chemistry.
+        </p>
       </div>
       
       <div class="card">
