--- a/pricing.html
+++ b/pricing.html
@@ -70,6 +70,22 @@
         </ul>
       </div>
 
+      <!-- NEW: Science Tutoring (distinct pricing) -->
+      <div class="card">
+        <h3>Science Tutoring</h3>
+        <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;">Grades 3–College</p>
+        <div class="price">Varies by level</div>
+        <ul>
+          <li><strong>Grades 3–5:</strong> $60/hr</li>
+          <li><strong>Grades 6–8:</strong> $65/hr</li>
+          <li><strong>Grades 9–12:</strong> $75/hr</li>
+          <li><strong>College (Intro Biology, Intro Physics, Environmental Science, general science electives):</strong> $85/hr</li>
+          <li>AP Biology & AP Physics support</li>
+          <li>Science fair guidance & lab report writing</li>
+          <li><em>Not offered:</em> organic chemistry, immunology, anatomy, or regular chemistry</li>
+        </ul>
+      </div>
+
       <div class="card">
         <h3>Specialized Exams & College</h3>
         <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;">SAT, SHSAT, College Level</p>
