--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ripa Elevate Academy – Tutoring That Works</title>
-  <meta name="description" content="Professional one-on-one tutoring for grades 2 through college. Expert instruction in math, science, reading, writing, test prep, and AI skills training.">
+  <meta name="description" content="Professional one-on-one tutoring for grades 2 through college. Expert instruction in math, reading, writing, test prep, science, and AI skills training.">
+
+  <!-- Cache Busting -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+
   <link rel="stylesheet" href="css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,19 +68,19 @@
     <div class="cards colorful">
       <div class="card">
         <h3>Elementary (Grades 2-5)</h3>
-        <p>Reading comprehension, basic math, <strong>science foundations</strong>, multiplication, division, fractions, and writing skills.</p>
+        <p>Reading comprehension, basic math, science foundations, multiplication, division, fractions, and writing skills.</p>
       </div>
       <div class="card">
         <h3>Middle School (Grades 6-8)</h3>
-        <p>Pre-Algebra, <strong>science concepts</strong> (life, earth & physical science basics), advanced reading, essay writing, and prep for high school.</p>
+        <p>Pre-Algebra, science concepts, advanced reading, essay writing, and preparation for high school coursework.</p>
       </div>
       <div class="card">
         <h3>High School</h3>
-        <p>Algebra, Geometry, Trigonometry, Pre-Calculus, <strong>Biology</strong>, <strong>Physics</strong>, and comprehensive test preparation.</p>
+        <p>Algebra, Geometry, Trigonometry, Pre-Calculus, Biology, Chemistry, Physics (introductory), and comprehensive test preparation.</p>
       </div>
       <div class="card">
         <h3>College & Beyond</h3>
-        <p>College Algebra, Calculus I/II, Discrete Math, <strong>College Biology</strong>, <strong>Intro Physics</strong>, Environmental Science, SAT/SHSAT prep, and AI skills training.</p>
+        <p>College Algebra, Calculus I/II, Discrete Math, Biology, General Science courses, SAT/SHSAT prep, and AI skills training.</p>
       </div>
     </div>
   </section>
@@ -110,10 +115,10 @@
   </footer>
 
   <script>
-    /* Remove any cache-busting query from homepage URL */
     if (window.location.search.length > 0) {
       window.location.href = window.location.origin + window.location.pathname;
     }
   </script>
 </body>
 </html>
+
