--- a/pricing.html
+++ b/pricing.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pricing – Ripa Elevate Academy</title>
-  <meta name="description" content="Affordable tutoring rates for all grade levels. Transparent pricing with no hidden fees. Premium video library subscription available.">
+  <meta name="description" content="Affordable tutoring rates for all grade levels. Transparent pricing with no hidden fees. Premium video library subscription and adaptive diagnostic available.">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
@@ -38,7 +38,7 @@
       <div class="card">
         <h3>Elementary</h3>
         <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;">Grades 2–5</p>
-        <div class="price">$55/hr</div>
+        <div class="price">$60/hr</div>
         <ul>
           <li>1-on-1 personalized tutoring</li>
           <li>Homework help and foundational support</li>
@@ -62,7 +62,7 @@
       <div class="card">
         <h3>High School</h3>
         <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;">Grades 9–12</p>
-        <div class="price">$70/hr</div>
+        <div class="price">$75/hr</div>
         <ul>
           <li>Algebra, Geometry, Pre-Calculus</li>
           <li>Advanced writing and composition</li>
@@ -71,29 +71,14 @@
         </ul>
       </div>
 
-      <!-- NEW: Science Tutoring (distinct pricing) -->
-      <div class="card">
-        <h3>Science Tutoring</h3>
-        <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;">Grades 3–College</p>
-        <div class="price">Varies by level</div>
-        <ul>
-          <li><strong>Grades 3–5:</strong> $60/hr</li>
-          <li><strong>Grades 6–8:</strong> $65/hr</li>
-          <li><strong>Grades 9–12:</strong> $75/hr</li>
-          <li><strong>College (Intro Biology, Intro Physics, Environmental Science, general science electives):</strong> $85/hr</li>
-          <li>AP Biology & AP Physics support</li>
-          <li>Science fair guidance & lab report writing</li>
-          <li><em>Not offered:</em> organic chemistry, immunology, anatomy, or regular chemistry</li>
-        </ul>
-      </div>
-
       <div class="card">
         <h3>Specialized Exams & College</h3>
         <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;">SAT, SHSAT, College Level</p>
-        <div class="price">$75/hr</div>
+        <div class="price">$85/hr</div>
         <ul>
           <li>SAT, SHSAT, State Exams preparation</li>
           <li>College Algebra, Calculus I & II</li>
+          <li>College Biology & Science Classes</li>
           <li>Discrete Mathematics</li>
           <li>Custom materials and focused prep</li>
         </ul>
@@ -112,38 +97,26 @@
       </div>
     </div>
 
-    <h3 style="text-align:center;margin-top:3rem;color:#1E2A38;">Add-On Options</h3>
-    <div class="cards colorful">
-      <div class="card">
-        <h3>Progress Report</h3>
-        <div class="price" style="font-size:1.5rem;">$20</div>
-        <p>Detailed summary of student progress with personalized feedback and recommended next steps for continued improvement.</p>
-      </div>
-      <div class="card">
-        <h3>Weekly Homework Packet</h3>
-        <div class="price" style="font-size:1.5rem;">$15</div>
-        <p>Personalized homework and practice worksheets delivered weekly, tailored to reinforce session content.</p>
-      </div>
-      <div class="card">
-        <h3>Quiz/Test Review Session</h3>
-        <div class="price" style="font-size:1.5rem;">$30</div>
-        <p>Focused 30-minute session dedicated to preparing for an upcoming quiz, test, or exam with targeted review.</p>
-      </div>
-    </div>
-
-    <h3 style="text-align:center; margin-top: 3rem; color:#1E2A38;">Premium Video Library</h3>
+    <h3 style="text-align:center;margin-top:3rem;color:#1E2A38;">Premium Learning Tools</h3>
     <div class="cards colorful">
       <div class="card">
         <h3>Monthly Subscription</h3>
-        <div class="price">$15/month</div>
+        <div class="price">$25/month</div>
         <ul>
           <li>Unlimited access to exclusive video lessons</li>
-          <li>Topics include math, reading, writing, and exam prep</li>
-          <li>AI skills and technology training videos</li>
-          <li>Watch anytime, at your own pace</li>
+          <li>Unlimited use of our Adaptive Diagnostic (Math & ELA)</li>
+          <li>Instant progress reports with strengths & next steps</li>
           <li>New content added regularly</li>
         </ul>
-        <a href="videos.html" class="button" style="display:inline-block;margin-top:1rem;background:#F28F3B;padding:0.8rem 1.5rem;color:#fff;border-radius:8px;text-decoration:none;transition:all 0.3s ease;">Explore Video Library</a>
+        <a href="videos.html" class="button">Subscribe Now</a>
+      </div>
+
+      <div class="card">
+        <h3>One-Time Diagnostic</h3>
+        <div class="price">$10</div>
+        <p>Single-use adaptive diagnostic (Math & ELA). About 40 minutes.  
+        Real-time progress indicators and instant report with strengths, priority skills, and action plan.</p>
+        <a href="diagnostic-test.html" class="button">Take the Diagnostic</a>
       </div>
     </div>
   </section>
