--- a/resources.html
+++ b/resources.html
@@ -19,14 +19,14 @@
       <a href="pricing.html">Pricing</a>
       <a href="booking.html">Book</a>
       <a href="testimonials.html">Testimonials</a>
-      <a href="resources.html">Resources</a>
+      <a href="resources.html" class="active">Resources</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <section class="section">
     <h2>Free & Premium Resources</h2>
-    <p>Access free downloadable worksheets, reading packets, and more. You can also subscribe to our premium video library for in-depth lessons on math, test prep, and AI skills for just $15/month.</p>
+    <p>Access free downloadable worksheets, reading packets, and more. You can also subscribe to our premium video library for in-depth lessons on math, test prep, and AI skills, or try our adaptive diagnostic.</p>
 
     <div class="cards colorful">
       <div class="card">
@@ -38,8 +38,13 @@
         <p>Skill-based practice problems for grades 1–12. Great for review, homework help, or skill-building between sessions.</p>
       </div>
       <div class="card">
-        <h3>Premium Video Library</h3>
-        <p>Subscribe for $15/month to unlock our growing video library. Topics include advanced math, SAT prep, coding, AI skills, and more – available anytime, for all ages.</p>
+        <h3>Premium Video Library & Diagnostics</h3>
+        <p><strong>$25/month</strong> — Unlimited video lessons + unlimited adaptive diagnostics (Math & ELA).  
+        Or try a <strong>$10 one-time diagnostic</strong> if you’re not ready for a subscription.</p>
+        <p style="margin-top:.5rem;">
+          <a class="btn" href="videos.html">Subscribe Now</a> 
+          <a class="btn" href="diagnostic-test.html" style="margin-left:.5rem;">One-Time Diagnostic</a>
+        </p>
       </div>
     </div>
   </section>
