--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Free Resources – Ripa Elevate Academy</title>
+  <title>Resources – Ripa Elevate Academy</title>
+  <!-- Cache busting -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -24,26 +28,44 @@
     </nav>
   </header>
 
+  <!-- Hero promo for the diagnostic -->
+  <section class="section" style="text-align:center;">
+    <div class="premium-badge" style="display:inline-block;background:#F28F3B;color:#fff;padding:6px 12px;border-radius:999px;font-weight:700;margin-bottom:10px;">NEW • Adaptive Diagnostic</div>
+    <h2>Meet the Future of Learning</h2>
+    <p style="max-width:820px;margin:0 auto;color:#555;">
+      Our AI-guided diagnostic adapts to each answer in real time—estimating level, tracking confidence, and building a personalized plan.
+      Use it once for <strong>$10</strong>, or get <strong>unlimited access</strong> with the <strong>$25/month</strong> subscription (includes our premium video library).
+    </p>
+    <div style="margin-top:14px;display:flex;gap:10px;justify-content:center;flex-wrap:wrap;">
+      <a class="btn" href="videos.html">Subscribe $25/mo</a>
+      <!-- If hosted in another repo/site, replace href with absolute URL -->
+      <a class="btn" href="diagnostic-test.html">One-Time Diagnostic – $10</a>
+    </div>
+    <div style="font-size:0.9rem;color:#777;margin-top:8px;">Private by design • No login required • Instant PDF report</div>
+  </section>
+
   <section class="section">
     <h2>Free & Premium Resources</h2>
-    <p>Access free downloadable worksheets, reading packets, and more. You can also subscribe to our premium video library for in-depth lessons on math, test prep, and AI skills, or try our adaptive diagnostic.</p>
+    <p>Boost learning at home with curated materials, on-demand lessons, and smart diagnostics.</p>
 
     <div class="cards colorful">
       <div class="card">
         <h3>Free Reading Packets</h3>
-        <p>Printable short stories and exercises to strengthen comprehension skills across all grades. New content is added regularly.</p>
+        <p>Printable short stories and exercises to strengthen comprehension skills across all grades.</p>
       </div>
+
       <div class="card">
         <h3>Free Math Worksheets</h3>
-        <p>Skill-based practice problems for grades 1–12. Great for review, homework help, or skill-building between sessions.</p>
+        <p>Skill-based practice problems for grades 1–12—perfect for homework help and independent practice.</p>
       </div>
+
       <div class="card">
         <h3>Premium Video Library & Diagnostics</h3>
-        <p><strong>$25/month</strong> — Unlimited video lessons + unlimited adaptive diagnostics (Math & ELA).  
-        Or try a <strong>$10 one-time diagnostic</strong> if you’re not ready for a subscription.</p>
+        <p><strong>$25/month</strong> — Unlimited video lessons + unlimited adaptive diagnostics (Math & ELA). Unlock step-by-step explanations, strategies, and new content added regularly.</p>
         <p style="margin-top:.5rem;">
-          <a class="btn" href="videos.html">Subscribe Now</a> 
-          <a class="btn" href="diagnostic-test.html" style="margin-left:.5rem;">One-Time Diagnostic</a>
+          <a class="btn" href="videos.html">Subscribe Now</a>
+          <!-- If hosted elsewhere, replace href with absolute URL -->
+          <a class="btn" href="diagnostic-test.html" style="margin-left:.5rem;">One-Time Diagnostic ($10)</a>
         </p>
       </div>
     </div>
@@ -55,4 +77,5 @@
   </footer>
 </body>
 </html>
+
 
