--- a/pricing.html
+++ b/pricing.html
@@ -5,11 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pricing – Ripa Elevate Academy</title>
-  <meta name="description" content="Transparent tutoring prices plus premium tools: unlimited adaptive diagnostics with subscription or $10 one-time access.">
-  <!-- Cache busting -->
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-  <meta http-equiv="Pragma" content="no-cache">
-  <meta http-equiv="Expires" content="0">
+  <meta name="description" content="Clear tutoring rates plus our AI-powered diagnostic: precise results in under 40 minutes, with a step-by-step plan. Try once for $10 or get unlimited with the $25/month subscription.">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
@@ -34,108 +30,80 @@
     </div>
   </header>
 
-  <!-- Future-forward banner -->
+  <!-- Simple, futuristic banner -->
   <section class="section" style="text-align:center;background:linear-gradient(135deg,#FFF3EB 0%,#F5F9FC 100%);border-radius:12px;margin:24px auto;max-width:1100px;padding:28px 20px;">
-    <div class="premium-badge" style="display:inline-block;background:#F28F3B;color:#fff;padding:6px 12px;border-radius:999px;font-weight:700;margin-bottom:10px;">NEW • AI-Guided Adaptive Diagnostic</div>
+    <div style="display:inline-block;background:#F28F3B;color:#fff;padding:6px 12px;border-radius:999px;font-weight:700;margin-bottom:10px;">
+      NEW • Smart Diagnostic Test
+    </div>
     <h2 style="margin:6px 0 8px;">The Future of Tutoring Is Here</h2>
-    <p style="max-width:800px;margin:0 auto;color:#555;">
-      Real-time level estimates, confidence tracking, and instant action plans. Use it once for <strong>$10</strong>—or get <strong>unlimited access</strong> with our <strong>$25/month</strong> subscription (plus premium video lessons).
+    <p style="max-width:820px;margin:0 auto;color:#555;">
+      Find out <strong>exactly where your student stands — down to the month — in under 40 minutes.</strong>
+      Our AI-powered diagnostic gives a real-time report with strengths, gaps, and a
+      <strong>clear step-by-step study plan</strong>.
+      Try it once for <strong>$10</strong> or get <strong>unlimited access</strong> (plus premium video lessons) with our
+      <strong>$25/month subscription</strong>.
     </p>
     <div style="margin-top:14px;display:flex;gap:10px;justify-content:center;flex-wrap:wrap;">
       <a class="btn" href="videos.html">Subscribe $25/mo (Best Value)</a>
-      <!-- If hosted in another repo/site, replace href with absolute URL -->
       <a class="btn" href="diagnostic-test.html">Try Once – $10</a>
     </div>
+    <div style="font-size:.9rem;color:#777;margin-top:8px;">Private by design • No login required • Instant PDF report</div>
   </section>
 
   <section class="section pricing alt-bg">
     <h2>Pricing Plans</h2>
-    <p>All sessions are 60 minutes and personalized to each student's needs. No contracts or hidden fees.</p>
+    <p>All sessions are 60 minutes and fully personalized. No contracts or hidden fees.</p>
 
     <div class="cards colorful">
       <div class="card">
         <h3>Elementary</h3>
         <p style="font-size:0.9rem;color:#666;margin-bottom:1rem;">Grades 3–5</p>
         <div class="price">$60/hr</div>
-        <ul>
-          <li>1-on-1 personalized tutoring</li>
-          <li>Homework help and foundational support</li>
-          <li>Reading comprehension and basic math</li>
-          <li>Progress tracking included</li>
-        </ul>
+        <p>1-on-1 support for reading, writing, and foundational math. Homework help and progress notes included.</p>
       </div>
 
       <div class="card">
         <h3>Middle School</h3>
         <p style="font-size:0.9rem;color:#666;margin-bottom:1rem;">Grades 6–8</p>
         <div class="price">$65/hr</div>
-        <ul>
-          <li>Core subjects and pre-algebra</li>
-          <li>Study skills & test strategies</li>
-          <li>Homework support</li>
-          <li>Regular progress updates</li>
-        </ul>
+        <p>Pre-Algebra and core subjects, study skills, test strategies, and regular progress updates.</p>
       </div>
 
       <div class="card">
         <h3>High School</h3>
         <p style="font-size:0.9rem;color:#666;margin-bottom:1rem;">Grades 9–12</p>
         <div class="price">$75/hr</div>
-        <ul>
-          <li>Algebra, Geometry, Pre-Calculus</li>
-          <li>Advanced writing and composition</li>
-          <li>Exam strategies and concept mastery</li>
-          <li>College preparation support</li>
-        </ul>
+        <p>Algebra, Geometry, Pre-Calculus, advanced writing, and exam prep with a clear plan to mastery.</p>
       </div>
 
       <div class="card">
         <h3>Specialized Exams & College</h3>
         <p style="font-size:0.9rem;color:#666;margin-bottom:1rem;">SAT, SHSAT, College Level</p>
         <div class="price">$85/hr</div>
-        <ul>
-          <li>SAT, SHSAT, State Exams preparation</li>
-          <li>College Algebra, Calculus I–II</li>
-          <li>College Biology & Science Classes</li>
-          <li>Discrete Mathematics</li>
-        </ul>
+        <p>SAT/SHSAT prep, College Algebra, Calculus I–II, College Biology and science classes, and Discrete Math.</p>
       </div>
 
       <div class="card">
         <h3>AI & Tech Skills Training</h3>
         <p style="font-size:0.9rem;color:#666;margin-bottom:1rem;">All Ages Welcome</p>
         <div class="price">$90/hr</div>
-        <ul>
-          <li>ChatGPT & AI tool mastery</li>
-          <li>Automation and productivity</li>
-          <li>Beginner-friendly coding</li>
-          <li>Digital literacy</li>
-        </ul>
+        <p>ChatGPT & AI tools, automation and productivity, beginner-friendly coding, and digital fluency.</p>
       </div>
     </div>
 
     <h3 style="text-align:center;margin-top:3rem;color:#1E2A38;">Premium Learning Tools</h3>
     <div class="cards colorful">
       <div class="card">
-        <div style="position:relative;">
-          <span style="position:absolute;top:-10px;left:-10px;background:#22c55e;color:#fff;padding:6px 10px;border-radius:10px;font-weight:700;">Best Value</span>
-        </div>
         <h3>Monthly Subscription</h3>
         <div class="price">$25/month</div>
-        <ul>
-          <li>Unlimited access to premium video lessons</li>
-          <li>Unlimited use of the Adaptive Diagnostic (Math & ELA)</li>
-          <li>Instant reports: strengths • priorities • action plan</li>
-          <li>New content added regularly</li>
-        </ul>
+        <p>Unlimited access to premium video lessons and <strong>unlimited use of the Smart Diagnostic</strong> (Math & ELA) with instant, easy-to-read reports.</p>
         <a href="videos.html" class="button">Subscribe Now</a>
       </div>
 
       <div class="card">
         <h3>One-Time Diagnostic</h3>
         <div class="price">$10</div>
-        <p>~40 minutes. Real-time level estimates & confidence, live strengths/needs, and an instant report with a 2–4 week plan.</p>
-        <!-- If hosted elsewhere, replace href with absolute URL -->
+        <p>Under 40 minutes. Real-time results with an exact, to-the-month snapshot, strengths & gaps, and a friendly 2–4 week study plan.</p>
         <a href="diagnostic-test.html" class="button">Take the Diagnostic</a>
       </div>
     </div>
@@ -145,12 +113,12 @@
       <div class="card">
         <h3>Progress Report</h3>
         <div class="price" style="font-size:1.5rem;">$20</div>
-        <p>Detailed summary of progress with personalized feedback and recommended next steps.</p>
+        <p>Clear summary of progress with practical next steps for continued improvement.</p>
       </div>
       <div class="card">
         <h3>Weekly Homework Packet</h3>
         <div class="price" style="font-size:1.5rem;">$15</div>
-        <p>Personalized worksheets delivered weekly to reinforce session content.</p>
+        <p>Personalized worksheets delivered weekly to reinforce what we’re learning.</p>
       </div>
       <div class="card">
         <h3>Quiz/Test Review Session</h3>
@@ -171,4 +139,5 @@
   </footer>
 </body>
 </html>
+
 
