--- a/resources.html
+++ b/resources.html
@@ -4,10 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resources – Ripa Elevate Academy</title>
-  <!-- Cache busting -->
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-  <meta http-equiv="Pragma" content="no-cache">
-  <meta http-equiv="Expires" content="0">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -28,43 +24,46 @@
     </nav>
   </header>
 
-  <!-- Hero promo for the diagnostic -->
+  <!-- Hero promo for the diagnostic (simpler language) -->
   <section class="section" style="text-align:center;">
-    <div class="premium-badge" style="display:inline-block;background:#F28F3B;color:#fff;padding:6px 12px;border-radius:999px;font-weight:700;margin-bottom:10px;">NEW • Adaptive Diagnostic</div>
-    <h2>Meet the Future of Learning</h2>
-    <p style="max-width:820px;margin:0 auto;color:#555;">
-      Our AI-guided diagnostic adapts to each answer in real time—estimating level, tracking confidence, and building a personalized plan.
-      Use it once for <strong>$10</strong>, or get <strong>unlimited access</strong> with the <strong>$25/month</strong> subscription (includes our premium video library).
+    <div style="display:inline-block;background:#F28F3B;color:#fff;padding:6px 12px;border-radius:999px;font-weight:700;margin-bottom:10px;">
+      NEW • Smart Diagnostic Test
+    </div>
+    <h2>Know Exactly Where You Stand</h2>
+    <p style="max-width:860px;margin:0 auto;color:#555;">
+      In <strong>under 40 minutes</strong>, get a real-time learning report that shows your level
+      <strong>down to the month</strong>, highlights strengths and gaps, and gives a
+      <strong>clear plan to study next</strong>.
+      Try it once for <strong>$10</strong> or get <strong>unlimited access</strong>—plus our premium video lessons—with the
+      <strong>$25/month subscription</strong>.
     </p>
     <div style="margin-top:14px;display:flex;gap:10px;justify-content:center;flex-wrap:wrap;">
       <a class="btn" href="videos.html">Subscribe $25/mo</a>
-      <!-- If hosted in another repo/site, replace href with absolute URL -->
       <a class="btn" href="diagnostic-test.html">One-Time Diagnostic – $10</a>
     </div>
-    <div style="font-size:0.9rem;color:#777;margin-top:8px;">Private by design • No login required • Instant PDF report</div>
+    <div style="font-size:.9rem;color:#777;margin-top:8px;">Private by design • No login required • Instant PDF report</div>
   </section>
 
   <section class="section">
     <h2>Free & Premium Resources</h2>
-    <p>Boost learning at home with curated materials, on-demand lessons, and smart diagnostics.</p>
+    <p>Boost learning at home with simple resources, on-demand lessons, and smart diagnostics that point you exactly where to focus.</p>
 
     <div class="cards colorful">
       <div class="card">
         <h3>Free Reading Packets</h3>
-        <p>Printable short stories and exercises to strengthen comprehension skills across all grades.</p>
+        <p>Printable short stories and exercises to build comprehension across grades.</p>
       </div>
 
       <div class="card">
         <h3>Free Math Worksheets</h3>
-        <p>Skill-based practice problems for grades 1–12—perfect for homework help and independent practice.</p>
+        <p>Skill-based practice for grades 1–12. Great for homework help and quick review.</p>
       </div>
 
       <div class="card">
         <h3>Premium Video Library & Diagnostics</h3>
-        <p><strong>$25/month</strong> — Unlimited video lessons + unlimited adaptive diagnostics (Math & ELA). Unlock step-by-step explanations, strategies, and new content added regularly.</p>
+        <p><strong>$25/month</strong> — Unlimited video lessons and <strong>unlimited Smart Diagnostic tests</strong> in Math & ELA, with instant, easy-to-use reports and plans.</p>
         <p style="margin-top:.5rem;">
           <a class="btn" href="videos.html">Subscribe Now</a>
-          <!-- If hosted elsewhere, replace href with absolute URL -->
           <a class="btn" href="diagnostic-test.html" style="margin-left:.5rem;">One-Time Diagnostic ($10)</a>
         </p>
       </div>
@@ -77,5 +76,6 @@
   </footer>
 </body>
 </html>
+
 
 
