--- a/pricing.html
+++ b/pricing.html
@@ -1,11 +1,10 @@
-<!-- science-pricing v1 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pricing – Ripa Elevate Academy</title>
-  <meta name="description" content="Clear tutoring rates plus our AI-powered diagnostic: precise results in under 40 minutes, with a step-by-step plan. Try once for $10 or get unlimited with the $25/month subscription.">
+  <meta name="description" content="Affordable tutoring rates for all grade levels. Transparent pricing. Optional Smart Diagnostic with one-time or subscription access.">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
@@ -13,7 +12,7 @@
 </head>
 <body>
   <header>
-    <div class="container" style="display:flex;justify-content:space-between;align-items:center;">
+    <div class="container">
       <div class="logo"><a href="index.html">Ripa Elevate Academy</a></div>
       <nav>
         <ul>
@@ -30,64 +29,95 @@
     </div>
   </header>
 
-  <!-- Simple, futuristic banner -->
-  <section class="section" style="text-align:center;background:linear-gradient(135deg,#FFF3EB 0%,#F5F9FC 100%);border-radius:12px;margin:24px auto;max-width:1100px;padding:28px 20px;">
-    <div style="display:inline-block;background:#F28F3B;color:#fff;padding:6px 12px;border-radius:999px;font-weight:700;margin-bottom:10px;">
+  <!-- Smart Diagnostic Banner -->
+  <section class="section" style="text-align:center;max-width:1100px;margin:0 auto;">
+    <div style="display:inline-block;background:#ffe7d3;color:#1E2A38;padding:.35rem .8rem;border-radius:999px;font-weight:700;margin-bottom:.6rem;">
       NEW • Smart Diagnostic Test
     </div>
-    <h2 style="margin:6px 0 8px;">The Future of Tutoring Is Here</h2>
-    <p style="max-width:820px;margin:0 auto;color:#555;">
-      Find out <strong>exactly where your student stands — down to the month — in under 40 minutes.</strong>
-      Our AI-powered diagnostic gives a real-time report with strengths, gaps, and a
-      <strong>clear step-by-step study plan</strong>.
-      Try it once for <strong>$10</strong> or get <strong>unlimited access</strong> (plus premium video lessons) with our
-      <strong>$25/month subscription</strong>.
+    <h1 style="margin:.2rem 0 0;">The Future of Tutoring Is Here</h1>
+    <p style="color:#445;max-width:900px;margin:.75rem auto 0;font-size:1.05rem;">
+      Find out <strong>exactly</strong> where your student stands — <strong>down to the month</strong> — in under 40 minutes.
+      Our AI-powered diagnostic gives a real-time report with strengths, gaps, and a <strong>clear step-by-step study plan</strong>.
+      Try it once for <strong>$10</strong> or get <strong>unlimited access</strong> with our <strong>$25/month</strong> subscription (plus premium video lessons).
     </p>
     <div style="margin-top:14px;display:flex;gap:10px;justify-content:center;flex-wrap:wrap;">
-      <a class="btn" href="videos.html">Subscribe $25/mo (Best Value)</a>
-      <a class="btn" href="diagnostic-test.html">Try Once – $10</a>
+      <!-- REPLACE with your Stripe Payment Links -->
+      <a class="btn" href="STRIPE_SUBSCRIPTION_LINK" target="_blank" rel="noopener">
+        Subscribe $25/mo (Best Value)
+      </a>
+      <a class="btn" href="STRIPE_ONETIME_LINK" target="_blank" rel="noopener">
+        Try Once – $10
+      </a>
     </div>
-    <div style="font-size:.9rem;color:#777;margin-top:8px;">Private by design • No login required • Instant PDF report</div>
+    <div style="font-size:.9rem;color:#777;margin-top:8px;">
+      Private by design • No login required • Instant PDF report
+    </div>
   </section>
 
+  <!-- Plans -->
   <section class="section pricing alt-bg">
     <h2>Pricing Plans</h2>
-    <p>All sessions are 60 minutes and fully personalized. No contracts or hidden fees.</p>
+    <p>All sessions are 60 minutes and personalized to each student's needs. No contracts or hidden fees.</p>
 
     <div class="cards colorful">
       <div class="card">
         <h3>Elementary</h3>
-        <p style="font-size:0.9rem;color:#666;margin-bottom:1rem;">Grades 3–5</p>
+        <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;">Grades 3–5</p>
         <div class="price">$60/hr</div>
-        <p>1-on-1 support for reading, writing, and foundational math. Homework help and progress notes included.</p>
+        <ul>
+          <li>1-on-1 personalized tutoring</li>
+          <li>Homework help and foundational support</li>
+          <li>Reading comprehension and basic math</li>
+          <li>Progress tracking included</li>
+        </ul>
       </div>
 
       <div class="card">
         <h3>Middle School</h3>
-        <p style="font-size:0.9rem;color:#666;margin-bottom:1rem;">Grades 6–8</p>
+        <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;">Grades 6–8</p>
         <div class="price">$65/hr</div>
-        <p>Pre-Algebra and core subjects, study skills, test strategies, and regular progress updates.</p>
+        <ul>
+          <li>Core subjects and pre-algebra</li>
+          <li>Study skills & test strategies</li>
+          <li>Homework support</li>
+          <li>Regular progress updates</li>
+        </ul>
       </div>
 
       <div class="card">
         <h3>High School</h3>
-        <p style="font-size:0.9rem;color:#666;margin-bottom:1rem;">Grades 9–12</p>
+        <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;">Grades 9–12</p>
         <div class="price">$75/hr</div>
-        <p>Algebra, Geometry, Pre-Calculus, advanced writing, and exam prep with a clear plan to mastery.</p>
+        <ul>
+          <li>Algebra, Geometry, Pre-Calculus</li>
+          <li>Advanced writing and composition</li>
+          <li>Exam strategies and concept mastery</li>
+          <li>College preparation support</li>
+        </ul>
       </div>
 
       <div class="card">
         <h3>Specialized Exams & College</h3>
-        <p style="font-size:0.9rem;color:#666;margin-bottom:1rem;">SAT, SHSAT, College Level</p>
+        <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;">SAT, SHSAT, College Level</p>
         <div class="price">$85/hr</div>
-        <p>SAT/SHSAT prep, College Algebra, Calculus I–II, College Biology and science classes, and Discrete Math.</p>
+        <ul>
+          <li>SAT, SHSAT, State Exams prep</li>
+          <li>College Algebra, Calculus I–II</li>
+          <li>College Biology & Science Classes</li>
+          <li>Discrete Mathematics</li>
+        </ul>
       </div>
 
       <div class="card">
         <h3>AI & Tech Skills Training</h3>
-        <p style="font-size:0.9rem;color:#666;margin-bottom:1rem;">All Ages Welcome</p>
+        <p style="font-size: 0.9rem; color: #666; margin-bottom: 1rem;">All Ages Welcome</p>
         <div class="price">$90/hr</div>
-        <p>ChatGPT & AI tools, automation and productivity, beginner-friendly coding, and digital fluency.</p>
+        <ul>
+          <li>ChatGPT and AI tool mastery</li>
+          <li>Automation and productivity</li>
+          <li>Beginner-friendly coding</li>
+          <li>Digital literacy</li>
+        </ul>
       </div>
     </div>
 
@@ -96,15 +126,26 @@
       <div class="card">
         <h3>Monthly Subscription</h3>
         <div class="price">$25/month</div>
-        <p>Unlimited access to premium video lessons and <strong>unlimited use of the Smart Diagnostic</strong> (Math & ELA) with instant, easy-to-read reports.</p>
-        <a href="videos.html" class="button">Subscribe Now</a>
+        <ul>
+          <li>Unlimited access to the Smart Diagnostic (Math & ELA)</li>
+          <li>Instant reports with strengths, priorities & study plan</li>
+          <li>Unlimited access to premium video lessons</li>
+          <li>New content added regularly</li>
+        </ul>
+        <a class="button" href="STRIPE_SUBSCRIPTION_LINK" target="_blank" rel="noopener"
+           style="display:inline-block;margin-top:1rem;background:#F28F3B;padding:0.8rem 1.5rem;color:#fff;border-radius:8px;text-decoration:none;">
+          Subscribe Now
+        </a>
       </div>
 
       <div class="card">
         <h3>One-Time Diagnostic</h3>
         <div class="price">$10</div>
-        <p>Under 40 minutes. Real-time results with an exact, to-the-month snapshot, strengths & gaps, and a friendly 2–4 week study plan.</p>
-        <a href="diagnostic-test.html" class="button">Take the Diagnostic</a>
+        <p>~40 minutes. Real-time level estimates & confidence, live strengths/needs, and an instant report with a 2–4 week plan.</p>
+        <a class="button" href="STRIPE_ONETIME_LINK" target="_blank" rel="noopener"
+           style="display:inline-block;margin-top:1rem;background:#F28F3B;padding:0.8rem 1.5rem;color:#fff;border-radius:8px;text-decoration:none;">
+          Take the Diagnostic
+        </a>
       </div>
     </div>
 
@@ -113,12 +154,12 @@
       <div class="card">
         <h3>Progress Report</h3>
         <div class="price" style="font-size:1.5rem;">$20</div>
-        <p>Clear summary of progress with practical next steps for continued improvement.</p>
+        <p>Detailed summary of student progress with personalized feedback and next steps.</p>
       </div>
       <div class="card">
         <h3>Weekly Homework Packet</h3>
         <div class="price" style="font-size:1.5rem;">$15</div>
-        <p>Personalized worksheets delivered weekly to reinforce what we’re learning.</p>
+        <p>Personalized worksheets delivered weekly to reinforce session content.</p>
       </div>
       <div class="card">
         <h3>Quiz/Test Review Session</h3>
@@ -133,11 +174,5 @@
       <p>&copy; 2025 Ripa Elevate Academy. All rights reserved.</p>
       <div class="footer-contact">
         Phone: <a href="tel:+13479960551">347-996-0551</a> |
-        Email: <a href="mailto:ripabrian93@gmail.com">ripabrian93@gmail.com</a>
-      </div>
-    </div>
-  </footer>
-</body>
-</html>
 
 
