--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resources – Ripa Elevate Academy</title>
+  <title>Free Resources – Ripa Elevate Academy</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -24,49 +24,43 @@
     </nav>
   </header>
 
-  <!-- Hero promo for the diagnostic (simpler language) -->
-  <section class="section" style="text-align:center;">
-    <div style="display:inline-block;background:#F28F3B;color:#fff;padding:6px 12px;border-radius:999px;font-weight:700;margin-bottom:10px;">
-      NEW • Smart Diagnostic Test
-    </div>
-    <h2>Know Exactly Where You Stand</h2>
-    <p style="max-width:860px;margin:0 auto;color:#555;">
-      In <strong>under 40 minutes</strong>, get a real-time learning report that shows your level
-      <strong>down to the month</strong>, highlights strengths and gaps, and gives a
-      <strong>clear plan to study next</strong>.
-      Try it once for <strong>$10</strong> or get <strong>unlimited access</strong>—plus our premium video lessons—with the
-      <strong>$25/month subscription</strong>.
-    </p>
-    <div style="margin-top:14px;display:flex;gap:10px;justify-content:center;flex-wrap:wrap;">
-      <a class="btn" href="videos.html">Subscribe $25/mo</a>
-      <a class="btn" href="diagnostic-test.html">One-Time Diagnostic – $10</a>
-    </div>
-    <div style="font-size:.9rem;color:#777;margin-top:8px;">Private by design • No login required • Instant PDF report</div>
-  </section>
-
   <section class="section">
     <h2>Free & Premium Resources</h2>
-    <p>Boost learning at home with simple resources, on-demand lessons, and smart diagnostics that point you exactly where to focus.</p>
+    <p>Access free downloadable worksheets, reading packets, and more. You can also subscribe to our premium video library or unlock our Smart Diagnostic for precise, actionable guidance.</p>
 
     <div class="cards colorful">
       <div class="card">
         <h3>Free Reading Packets</h3>
-        <p>Printable short stories and exercises to build comprehension across grades.</p>
+        <p>Printable short stories and exercises to strengthen comprehension skills across all grades. New content is added regularly.</p>
       </div>
-
       <div class="card">
         <h3>Free Math Worksheets</h3>
-        <p>Skill-based practice for grades 1–12. Great for homework help and quick review.</p>
+        <p>Skill-based practice problems for grades 1–12. Great for review, homework help, or skill-building between sessions.</p>
       </div>
-
       <div class="card">
-        <h3>Premium Video Library & Diagnostics</h3>
-        <p><strong>$25/month</strong> — Unlimited video lessons and <strong>unlimited Smart Diagnostic tests</strong> in Math & ELA, with instant, easy-to-use reports and plans.</p>
-        <p style="margin-top:.5rem;">
-          <a class="btn" href="videos.html">Subscribe Now</a>
-          <a class="btn" href="diagnostic-test.html" style="margin-left:.5rem;">One-Time Diagnostic ($10)</a>
-        </p>
+        <h3>Premium Video Library</h3>
+        <p>Subscribe to unlock our growing video library. Topics include advanced math, SAT prep, coding, AI skills, and more – available anytime, for all ages.</p>
       </div>
+    </div>
+  </section>
+
+  <!-- Smart Diagnostic Promo -->
+  <section class="section" style="text-align:center;">
+    <div style="display:inline-block;background:#ffe7d3;color:#1E2A38;padding:.35rem .8rem;border-radius:999px;font-weight:700;margin-bottom:.6rem;">
+      NEW • Smart Diagnostic Test
+    </div>
+    <h2>Pinpoint Progress in Under 40 Minutes</h2>
+    <p style="max-width:850px;margin:0.5rem auto;color:#445;">
+      Get a real-time report that shows exactly where a student stands — down to the month — plus a clear, step-by-step study plan. Choose a one-time test, or subscribe for unlimited use.
+    </p>
+    <div style="margin-top:.75rem;display:flex;gap:10px;justify-content:center;flex-wrap:wrap;">
+      <!-- REPLACE with your Stripe Payment Links -->
+      <a class="btn" href="STRIPE_SUBSCRIPTION_LINK" target="_blank" rel="noopener">
+        Subscribe Now ($25/mo)
+      </a>
+      <a class="btn" href="STRIPE_ONETIME_LINK" target="_blank" rel="noopener">
+        One-Time Diagnostic ($10)
+      </a>
     </div>
   </section>
 
