--- a/diagnostic-test.html
+++ b/diagnostic-test.html
@@ -6,6 +6,7 @@
 <title>Ripa Elevate — Adaptive Diagnostic (Demo)</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+<meta name="robots" content="noindex">
 <style>
 :root{
   --bg:#070a12; --text:#eef2fb; --muted:#b7c0d9;
@@ -60,6 +61,9 @@ select,input[type=number]{background:rgba(255,255,255,.08);border:1px solid var(
 </style>
 </head>
 <body>
+<script src="js/paywall.js"></script>
+<script>requireDiagAccess();</script>
+
 <header>
   <div class="container">
     <div class="row">
@@ -568,3 +572,4 @@ cancelStart.onclick = ()=>{ startMask.style.display='none'; };
 </script>
 </body>
 </html>
+
