--- a/diagnostic-gate.html
+++ b/diagnostic-gate.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>Access Granted – Smart Diagnostic</title>
+  <meta name="robots" content="noindex,nofollow">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
@@ -24,17 +25,36 @@
 
   <main class="section" style="text-align:center;max-width:900px;margin:0 auto;">
     <h2>Access Granted</h2>
-    <p>Thanks! Your purchase was successful and your diagnostic access is unlocked on this device.</p>
-    <p>You will be redirected to the diagnostic in a moment. If not, use the button below.</p>
+    <p>Thanks! Your purchase was successful and diagnostic access is now unlocked on this device.</p>
+    <p>You’ll be redirected to the diagnostic in a moment. If not, use the button below.</p>
     <div style="margin-top:16px;">
       <a class="btn" href="diagnostic-test.html">Go to Diagnostic</a>
     </div>
+
+    <noscript>
+      <p style="margin-top:1rem;color:#b33;">JavaScript is required to open the diagnostic. Please enable JavaScript and try again.</p>
+    </noscript>
   </main>
 
-  <!-- Paywall helper sets the access flag via ?access=diag -->
+  <!-- Optional helper (also handles ?access=diag) -->
   <script src="js/paywall.js"></script>
   <script>
-    setTimeout(function(){ window.location.href = 'diagnostic-test.html'; }, 1200);
+    // Redundant inline unlock so this page works even if paywall.js is blocked/cached
+    (function () {
+      function hasParam(keys) {
+        var s = location.search;
+        return keys.some(function(k){
+          return new RegExp('(?:\\?|&)' + k + '(=|&|$)').test(s);
+        });
+      }
+      try {
+        if (hasParam(['access=diag','unlock=1','success=1'])) {
+          localStorage.setItem('rea_diag_paid','1');
+        }
+      } catch(e) {}
+      // Redirect after a short pause so the user sees confirmation
+      setTimeout(function(){ location.href = 'diagnostic-test.html'; }, 1000);
+    })();
   </script>
 
   <footer>
